<resources>
    <string name="app_name">test</string>
    <string name="hello">Hello</string>
    <string name="subject1">Subject 1</string>
    <string name="subject2">Subject 2</string>
    <string name="subject3">Subject 3</string>
    <string name="subject4">Subject 4</string>
    <string name="subject5">Subject 5</string>
    <string name="subject6">Subject 6</string>
    <string name="result">Result</string>
    <string name="cgpaValue">0.00</string>
    <string name="ground_floor">G</string>
    <string name="first_floor">1</string>
    <string name="second_floor">2</string>
    <string name="third_floor">3</string>
    <string-array name="grades">
        <item>O</item>
        <item>A+</item>
        <item>A</item>
        <item>B+</item>
        <item>B</item>
        <item>U</item>
    </string-array>
</resources>